Thu May 17 21:35:00 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* util.c: win32 fixes

Thu May 17 15:53:42 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* gtkgame.c, gtkwindows.c, progress.c: fix problem with
	DIALOG_FLAG_NOTIDY not being used. Make sure that the parent of the
	dialog is present.

	* util.c, board3d/matrix.c, board3d/matrix.h: compiler warnings

Mon May 14 12:21:13 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* util.[ch]: new files. Keeps the common parts of the ugly fixes of
	the util programs in one place.

Mon May 14 01:18:33 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* makehyper.c: rename WriteFile to WriteHyperFile to avoid conflict
	with windows.h

Mon May 14 01:10:14 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, gtkgame.c, set.c: Fix problems in SetupLang

Tue May  8 02:22:42 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* gtkgame.c, rollout.c: solved problem with calibration widget causing
	crash. Modality disabled, because of an unresolved issue.
	DIALOG_FLAG_NOTIDY is unused??

Mon May  7 23:29:33 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* gnubg.c: fix problem with lang settings not being loaded.
	* po/: now fuzzy matching, since po files are ill maintained.

Fri May  4 10:21:14 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* gnubg.c: fix issue with matches loaded twice from command line
	* analysis.c: fix issue with progress bar when running multithreaded
	* export.c, multithread.c: fix WIN32 compiler warnings

Wed May  2 00:00:38 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* Makefile.am, backgammon.h, bearoff.c, bearoff.h, bearoffdump.c,
	dice.c, eval.c, eval.h, gnubg.c, gnubgmodule.c, gnubgmodule.h,
	gtkfile.c, gtkgame.c, gtkoptions.c, gtkprefs.c, html.c, makebearoff.c,
	matchequity.c, matchequity.h, openurl.c, path.c, path.h, render.c,
	set.c, show.c, sound.c, sound.h, board3d/font3d.c, board3d/misc3d.c:
	remove path.[ch]

Sun Apr 29 01:18:40 CEST 2007 Christian Anthon <anthon@kiku.dk>
